packages/typ/tests/fixtures/diagnostics/0855_polyvar_exact_row_annotation_mismatch_10.ml.expected
File "0855_polyvar_exact_row_annotation_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0855_polyvar_exact_row_annotation_mismatch_10 is not a valid module name.

File "0855_polyvar_exact_row_annotation_mismatch_10.ml", line 1, characters 29-55:
1 | let _ : [ `A of int | `B ] = (`A true : [ `A of bool ])
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type [ `A of bool ]
       but an expression was expected of type [ `A of int | `B ]
       The first variant type does not allow tag(s) `B
